Completed 1 and 2 parts

--- a/app/assets/stylesheets/home.scss
+++ b/app/assets/stylesheets/home.scss
@@ -1,3 +1,116 @@
 // Place all the styles related to the home controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+
+body {
+	margin: 0;
+	padding: 0;
+	font-family: Arial, Helvetica, sans-serif;
+	font-size: 14px;
+
+}
+
+
+#header {
+	width: 1000px;
+	margin: 0 auto;
+	padding: 0px 0px 0px 0px;
+	text-align:center;
+	font-size: 22px;
+	font-family: Arial, Helvetica, sans-serif;
+
+}
+
+#header p {
+	margin: 0;
+	padding: 0px 0 0 32px;
+	font: normal 15px Georgia, "Times New Roman", Times, serif;
+	font-style: italic;
+	color: #BEBEBE;
+	text-align:center;
+
+} 
+/* Page */
+
+#page {
+	width: 980px;
+	margin: 0 auto;
+	padding: 0px 0px 0px 20px;
+}
+
+#page-bgtop {
+	padding: 20px 0px;
+}
+/* Content */
+
+#content {
+	float: right;
+	width: 700px;
+	padding: 40px 0px 0px 0px;
+}
+
+#questions  ul li p {
+	font-style: italic;
+}
+
+
+
+/* Sidebar */
+
+#sidebar {
+	float: left;
+	width: 300px;
+	margin: 0px;
+	padding: 20px 20px 0px 0px;
+}
+
+#sidebar ul {
+    list-style-type: none;
+    margin: 0 150px;
+    padding: 15px;
+    width: 200px;
+    height: 280px;
+    background-color: #f1f1f1;
+}
+
+#sidebar li a {
+    display: block;
+    color: #000;
+    padding: 35px;
+    text-decoration: none;
+    font-size: 18px;
+    text-align:center;
+}
+
+/* Change the link color on hover */
+#sidebar li a:hover {
+    background-color: #555;
+    color: white;
+}
+
+/* Footer */
+
+
+#footer {
+   position:fixed;
+   bottom: 0;
+   width: 1000px;
+   margin: 0 150px;
+   height: 30px;
+   padding: 0px 0px 0px 0px;
+   background:#616161;//optional
+   text-align:center;
+}
+
+#footer p {
+	margin: 0;
+	padding: 0px 0 0 32px;
+	font: normal 15px Georgia, "Times New Roman", Times, serif;
+	font-style: italic;
+	color: #BEBEBE;
+	
+} 
+
+ul {
+	
+}
