Finished the portfolio page

--- a/app/views/pages/connect.html.erb
+++ b/app/views/pages/connect.html.erb
@@ -1,2 +1,9 @@
-<h1>Pages#connect</h1>
-<p>Find me in app/views/pages/connect.html.erb</p>
+<div class="connect">
+<h3 style="text-align: center;"><p> CONNECT </p></h3>
+
+<ul>
+  <li><a href="http://codepen.io/sumithas2" target="_blank">CodePen</a></li>
+  <li><a href="https://github.com/sumithas2" target="_blank">GitHub</a></li>
+  <li><a href="https://bitbucket.org/sumithas2/" target="_blank">BitBucket</a></li>
+</ul>
+</div>
