--- a/app/assets/stylesheets/home.scss
+++ b/app/assets/stylesheets/home.scss
@@ -5,8 +5,9 @@
 body {
 	margin: 0;
 	padding: 0;
-	font-family: Arial, Helvetica, sans-serif;
-	font-size: 14px;
+	
+	font-family: "Times New Roman", Times, serif;
+	font-size: 16px;
 
 }
 
@@ -87,6 +88,44 @@ body {
     background-color: #555;
     color: white;
 }
+
+/* connect */
+
+.connect ul {
+    list-style-type: none;
+    margin: 80px 200px;
+    padding: 0;
+    overflow: hidden;
+    background-color: #333;
+    width: 300px;
+
+}
+
+.connect li {
+    float: left;
+    border-right: 10px solid #fff;
+}
+
+.connect li:last-child {
+    border-right: none;
+}
+
+.connect li a {
+    display: block;
+    color: white;
+    text-align: center;
+    padding: 14px 16px;
+    text-decoration: none;
+}
+
+.connect li a:hover:not(.active) {
+    background-color: #111;
+}
+
+.connect .active {
+    background-color: #4CAF50;
+}
+
 
 /* Footer */
 
