--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -1,4 +1,4 @@
-<h3 style="text-align: center">About Me</h3>
+<h3 style="text-align: center">ABOUT ME</h3>
 <div id="questions"> 
 <ul>
 	<li id="response">
